# tiers-lidars-dataset

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: data_show.rviz  lidar_calibrate.rviz  sensors_suite.urdf
data/ground_truth/: forest01_optitrack.csv  forest02_optitrack.csv  indoor01_optitrack.csv  indoor02_optitrack.csv  indoor03_optitrack.csv  indoor04_fastlio_os128.csv  indoor05_fastlio_os128.csv  road02_fastlio_os128.csv
launch/: data_show.launch  lidars_extri_comp.launch  pcl_calibrate.launch
scripts/: change_frameid.py  result_sub_ros.py
src/: aviaFormatConvert.cpp  horizonFormatConvert.cpp  lidars_extrinsic_comp.cpp
